--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,20 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+::-webkit-scrollbar {
+	width: 10px;
+	height: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    /* opacity: 0 !important; */
+	background: linear-gradient(to bottom, #4b5563, #111827);
+}
+/* Handle */
+::-webkit-scrollbar-thumb {
+    height: 10px;
+    border-radius: 10px;
+	background: linear-gradient(transparent, hsl(0, 0%, 100%));
+}
